# calculator-demo

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
tests/: test_capitilize.py  test_wallet.py
