[tool.poetry]
name = "calculator-demo"
version = "0.1.0"
description = ""
authors = ["Demetrius Veras <demetriushenry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
coverage = "^7.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
